objects/Blog__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <description>Content of the blog</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>B-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PubDate__c</fullName>
        <description>Published date</description>
        <label>PubDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the content</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the blog</description>
        <inlineHelpText>Title of the blog</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <description>Link to the original blog site</description>
        <label>link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Blog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Blog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>